[gd_scene load_steps=27 format=2]

[ext_resource path="res://scenes/options.gd" type="Script" id=1]
[ext_resource path="res://assets/panel/options.png" type="Texture" id=2]
[ext_resource path="res://assets/button_normal/normal_on.png" type="Texture" id=3]
[ext_resource path="res://assets/button_normal/normal_off.png" type="Texture" id=4]
[ext_resource path="res://assets/button_normal/normal_disabled.png" type="Texture" id=5]
[ext_resource path="res://fonts/font_big.tres" type="DynamicFont" id=6]
[ext_resource path="res://fonts/font.tres" type="DynamicFont" id=7]
[ext_resource path="res://assets/button_normal/normal_hover.png" type="Texture" id=8]
[ext_resource path="res://assets/button_skewed/button_back_pressed.png" type="Texture" id=9]
[ext_resource path="res://assets/button_skewed/button_back_normal.png" type="Texture" id=10]
[ext_resource path="res://assets/button_skewed/button_back_disabled.png" type="Texture" id=11]
[ext_resource path="res://assets/button_skewed/button_back_hover.png" type="Texture" id=12]
[ext_resource path="res://assets/button_skewed/button_back_focused.png" type="Texture" id=13]
[ext_resource path="res://assets/godot_theme/gui.theme" type="Theme" id=14]
[ext_resource path="res://assets/button_check/check_on.png" type="Texture" id=15]
[ext_resource path="res://assets/button_check/check_disable.png" type="Texture" id=16]
[ext_resource path="res://assets/button_normal/normal_focus.png" type="Texture" id=17]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 15 )
region_rect = Rect2( 0, 0, 64, 32 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 16 )
region_rect = Rect2( 0, 0, 64, 32 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 64, 32 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 64, 32 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 17 )
region_rect = Rect2( 0, 0, 64, 32 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 64, 32 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 64, 32 )

[sub_resource type="Animation" id=8]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("reglage:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 448, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "destroy"
} ]
}

[sub_resource type="Animation" id=9]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("reglage:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 448, 0 ), Vector2( 0, 0 ) ]
}

[node name="options" type="CanvasLayer"]
layer = 11
script = ExtResource( 1 )

[node name="reglage" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="base_sprite" type="TextureRect" parent="reglage"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -472.0
margin_top = -240.0
texture = ExtResource( 2 )
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_back" type="TextureButton" parent="reglage"]
margin_left = 72.0
margin_top = 47.0
margin_right = 273.0
margin_bottom = 97.0
focus_neighbour_bottom = NodePath("../Button_input")
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 12 )
texture_disabled = ExtResource( 11 )
texture_focused = ExtResource( 13 )

[node name="label" type="Label" parent="reglage/Button_back"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 6 )
text = "MENU_BACK"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_chrono" type="Button" parent="reglage"]
margin_left = 302.0
margin_top = 80.0
margin_right = 366.0
margin_bottom = 112.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color_pressed = Color( 0.254902, 0.952941, 0.988235, 1 )
text = "test"

[node name="button_vsync" type="CheckButton" parent="reglage"]
margin_left = 442.0
margin_top = 80.0
margin_right = 506.0
margin_bottom = 112.0
custom_styles/pressed = SubResource( 1 )
custom_styles/disabled = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_langue" type="Button" parent="reglage"]
margin_left = 302.0
margin_top = 130.0
margin_right = 366.0
margin_bottom = 162.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color_pressed = Color( 0.254902, 0.952941, 0.988235, 1 )
text = "test"

[node name="button_fullscreen" type="CheckButton" parent="reglage"]
margin_left = 442.315
margin_top = 130.0
margin_right = 506.315
margin_bottom = 162.0
custom_styles/pressed = SubResource( 1 )
custom_styles/disabled = SubResource( 2 )

[node name="Button_text" type="Button" parent="reglage"]
margin_left = 302.0
margin_top = 180.0
margin_right = 366.0
margin_bottom = 212.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color_pressed = Color( 0.254902, 0.952941, 0.988235, 1 )
text = "test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_particle" type="CheckButton" parent="reglage"]
margin_left = 442.0
margin_top = 180.0
margin_right = 506.0
margin_bottom = 212.0
custom_styles/pressed = SubResource( 1 )
custom_styles/disabled = SubResource( 2 )

[node name="musique" type="HSlider" parent="reglage"]
margin_left = 352.0
margin_top = 230.0
margin_right = 472.0
margin_bottom = 246.0

[node name="son" type="HSlider" parent="reglage"]
margin_left = 352.0
margin_top = 260.0
margin_right = 472.0
margin_bottom = 276.0
value = 10.0

[node name="Button_input" type="TextureButton" parent="reglage"]
margin_left = 62.0
margin_top = 230.0
margin_right = 263.0
margin_bottom = 280.0
focus_neighbour_top = NodePath("../Button_back")
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 12 )
texture_disabled = ExtResource( 11 )
texture_focused = ExtResource( 13 )

[node name="label" type="Label" parent="reglage/Button_input"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 6 )
text = "MENU_KEY"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fps_show" type="Label" parent="reglage"]
margin_left = 222.0
margin_top = 80.0
margin_right = 292.0
margin_bottom = 110.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "MENU_TIMER"
align = 2
valign = 1
autowrap = true

[node name="langage" type="Label" parent="reglage"]
margin_left = 222.0
margin_top = 130.0
margin_right = 292.0
margin_bottom = 160.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "MENU_LANGUE"
align = 2
valign = 1
autowrap = true

[node name="text" type="Label" parent="reglage"]
margin_left = 222.0
margin_top = 180.0
margin_right = 292.0
margin_bottom = 210.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "MENU_SPEED"
align = 2
valign = 1
autowrap = true

[node name="text_music" type="Label" parent="reglage"]
margin_left = 272.0
margin_top = 230.0
margin_right = 342.0
margin_bottom = 250.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "MENU_MUSIC"
align = 2
valign = 1
autowrap = true

[node name="text_son" type="Label" parent="reglage"]
margin_left = 272.0
margin_top = 260.0
margin_right = 342.0
margin_bottom = 280.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "MENU_SON"
align = 2
valign = 1
autowrap = true

[node name="menu_lock" type="Label" parent="reglage"]
margin_left = 372.0
margin_top = 80.0
margin_right = 432.0
margin_bottom = 110.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "MENU_LOCK"
align = 2
valign = 1
autowrap = true

[node name="particle" type="Label" parent="reglage"]
margin_left = 372.0
margin_top = 180.0
margin_right = 432.0
margin_bottom = 210.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "MENU_QUALITY"
align = 2
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text_fullscreen" type="Label" parent="reglage"]
margin_left = 372.0
margin_top = 130.0
margin_right = 432.0
margin_bottom = 160.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "MENU_FULLSCREEN"
align = 2
valign = 1
autowrap = true

[node name="text_volumemusic" type="Label" parent="reglage"]
margin_left = 472.0
margin_top = 230.0
margin_right = 502.0
margin_bottom = 250.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "100"
align = 2
valign = 1
autowrap = true

[node name="text_volumeson" type="Label" parent="reglage"]
margin_left = 472.0
margin_top = 260.0
margin_right = 502.0
margin_bottom = 280.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "100"
align = 2
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "open"
anims/close = SubResource( 8 )
anims/open = SubResource( 9 )
[connection signal="pressed" from="reglage/Button_back" to="." method="_on_Button_back_pressed"]
[connection signal="pressed" from="reglage/Button_chrono" to="." method="_on_Button_chrono_pressed"]
[connection signal="pressed" from="reglage/button_vsync" to="." method="_on_button_vsync_pressed"]
[connection signal="pressed" from="reglage/Button_langue" to="." method="_on_Button_langue_pressed"]
[connection signal="pressed" from="reglage/button_fullscreen" to="." method="_on_button_fullscreen_pressed"]
[connection signal="pressed" from="reglage/Button_text" to="." method="_on_Button_text_pressed"]
[connection signal="pressed" from="reglage/button_particle" to="." method="_on_button_particle_pressed"]
[connection signal="value_changed" from="reglage/musique" to="." method="_on_musique_value_changed"]
[connection signal="value_changed" from="reglage/son" to="." method="_on_son_value_changed"]
[connection signal="pressed" from="reglage/Button_input" to="." method="_on_Button_input_pressed"]
